--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
 # Star Wars Base API URL
 swapi.base_url=https://swapi.dev/api/
 
+# Database
+spring.datasource.url=jdbc:h2:mem:swapi
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=swapi
+spring.datasource.password=swapi
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.h2.console.enabled=true
+
+# Json converter
 spring.mvc.converters.preferred-json-mapper=gson
