Add user registration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=swapi
 spring.datasource.password=swapi
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-# spring.h2.console.enabled=true
+spring.h2.console.enabled=true
+spring.sql.init.mode=always
 
 # Json converter
 spring.mvc.converters.preferred-json-mapper=gson
