--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# JWT secret
+jwt.secret=mysupersecretpassphrase
+jwt.expiration-time=30
+
 # Star Wars Base API URL
 swapi.base_url=https://swapi.dev/api/
 
